fix: external links spacing 💅

--- a/layout.css
+++ b/layout.css
@@ -150,7 +150,7 @@ kbd {
   margin: 1rem 0;
 }
 .link {
-  display: block;
+  display: flex;
   color: var(--muted-color);
   font-style: italic;
   margin-top: 0.5rem;
@@ -162,7 +162,15 @@ kbd {
   margin-right: 10px;
 }
 .link-text {
+  display: inline-flex;
+  flex-direction: column;
+  word-break: break-word;
   margin-right: 5px;
+}
+@media (min-width: 480px) {
+  .link-text {
+    flex-direction: row;
+  }
 }
 .link-legal {
   display: block;
